--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,8 +3,9 @@
     background-color: black;
     color:white;
     padding: 5px;
-    font-size: 25px;
+    font-size: 20px;
     position: fixed;
+    font-weight: bolder;
 }
 
 .OPPO {
