--- a/src/components/Login_Register/Login.css
+++ b/src/components/Login_Register/Login.css
@@ -1,3 +1,6 @@
+* {
+    font-weight: bold;
+}
 .LoginPage {
     display: flex;
     flex-direction: column;
@@ -32,10 +35,12 @@
 
 .err {
     color:red;
+    font-weight: bolder;
 }
 
 .success {
     color:green;
+    font-weight: bolder;
 }
 input {
     padding: 10px 10px;
