--- a/src/components/OnePhone/OnePhone.css
+++ b/src/components/OnePhone/OnePhone.css
@@ -1,7 +1,6 @@
 .Phone {
     text-align: center;
     width: 300px;
-    height:400px;
     box-shadow: 4px 4px 8px 4px rgba(0, 0, 0, 0.2);
     margin: 50px 100px ;
     border-radius: 5px;
@@ -27,7 +26,7 @@ img {
     outline: none;
     cursor:pointer;
     font-size: 20px;
-    margin: 0 0 0 10px;
+    margin: 0 0 30px 0;
     padding: 5px;
 }
 
