--- a/src/components/shopping_cart/shoppingCart.css
+++ b/src/components/shopping_cart/shoppingCart.css
@@ -31,3 +31,16 @@ body {
 * {
     font-family: 'Open Sans', sans-serif;
 }
+
+.shoppingItemButton{
+    font-weight: bolder;
+    font-size: 20px;
+    margin: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    outline: none;
+    background-color: rgb(0, 0, 0);
+    color:white;
+    border: 1px solid rgb(255, 255, 255);
+}
