--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -18,23 +18,9 @@ html,body {
 
 #oppoImg {
     width: 100%;
-    height: 40rem ;
+    height: calc(100vw * 0.556) ;
     margin: 0;
     margin-top: 94px;
-}
-
-.NavLink {
-    width:auto;
-    height:auto;
-    color: white;
-    background-color: black;
-    outline: none;
-    cursor:pointer;
-    border:none;
-    font-size: 20px;
-    margin :0px 20px 10px;
-    font-weight:bolder;
-
 }
 
 .OPPO {
@@ -51,18 +37,6 @@ html,body {
 
 #Iot{
     scroll-margin-top: 120px;
-}
-
-a{
-    float: right;
-    font-family: 'Open Sans';
-    margin: 0 20px;
-    color:white;
-    text-decoration: none;
-    margin: 0 20px;
-    cursor:pointer;
-    font-size: 18px;
-    font-weight:bolder;
 }
 
 #logOut {
