--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,7 +15,7 @@
 
 }
 
-button, a {
+.nav-link  {
     margin :0px 20px 10px;
     padding: 0px;
     display: inline;
@@ -31,12 +31,12 @@ button, a {
 
 
 @media screen and (max-width: 992px) {
-    button, a {
+    .nav-link  {
       font-size: 18px;
     }
 }
 @media screen and (max-width: 600px) {
-    button, a {
+    .nav-link  {
       font-size: 14px;
     }
 }
