--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,46 +1,46 @@
-.header {
-    width:100%;
-    background-color: black;
-    color:white;
-    padding: 5px;
-    font-size: 20px;
-    position: fixed;
-    font-weight: bolder;
+.Header {
+  width: 100%;
+  background-color: white;
+  color: white;
+  padding: 5px;
+  position: fixed;
+  border-bottom: 2px solid grey;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.OPPO {
-    margin: 20px 20px 10px 0;
-    text-align: center;
-    font-weight:bolder;
-
+.Header .nav-link {
+  /* to make link look like button */
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 10px 10px;
+  color: black;
+  background-color: white;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 1.3vw;
+  font-weight: bolder;
+  font-family: "Open Sans", sans-serif;
 }
 
-.nav-link  {
-    margin :0px 20px 10px;
-    padding: 0px;
-    display: inline;
-    float: left;
-    color: white;
-    background-color: black;
-    outline: none;
-    cursor:pointer;
-    border:none;
-    font-size: 20px;
-    text-decoration: none;
+.Header .loginButton {
+  margin: 10px 15px;
+  padding: 0px;
+  text-decoration: none;
+  background-color: white;
+  color: black;
+  font-size: 1.3vw;
+  font-weight: bolder;
+  border: none;
+  font-family: "Open Sans", sans-serif;
 }
-
-
-@media screen and (max-width: 992px) {
-    .nav-link  {
-      font-size: 18px;
-    }
-}
-@media screen and (max-width: 600px) {
-    .nav-link  {
-      font-size: 14px;
-    }
-}
-
-.headerLogin{
-    float: right;
-} 
+/*# sourceMappingURL=Header.css.map */
