--- a/src/components/OneIot/OneIot.css
+++ b/src/components/OneIot/OneIot.css
@@ -1,13 +1,36 @@
-img {
-    width: 200px;
-    margin: 10px 0 0 0;
+.OneIot {
+  text-align: center;
+  width: 300px;
+  -webkit-box-shadow: 4px 4px 8px 4px rgba(0, 0, 0, 0.2);
+          box-shadow: 4px 4px 8px 4px rgba(0, 0, 0, 0.2);
+  margin: 10px 20px;
+  border-radius: 5px;
 }
 
-.OneIot {
-    text-align: center;
-    width: 300px;
-    box-shadow: 4px 4px 8px 4px rgba(0, 0, 0, 0.2);
-    margin: 50px 100px ;
-    border-radius: 5px;
-    height: 400px;
+.OneIot img {
+  width: 200px;
+  height: 200px;
+  margin: 10px;
 }
+
+.OneIot .productPrice {
+  color: rgba(0, 0, 0, 0.788);
+  margin: 20px;
+}
+
+.OneIot .seeDetails {
+  border-radius: 5px;
+  background-color: black;
+  color: white;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 20px;
+  margin: 0 0 30px 0;
+  padding: 5px;
+}
+
+.OneIot .seeDetails:hover {
+  background-color: green;
+}
+/*# sourceMappingURL=OneIot.css.map */
