--- a/src/components/OnePhone/OnePhone.css
+++ b/src/components/OnePhone/OnePhone.css
@@ -1,36 +1,36 @@
-.Phone {
-    text-align: center;
-    width: 300px;
-    box-shadow: 4px 4px 8px 4px rgba(0, 0, 0, 0.2);
-    margin: 50px 100px ;
-    border-radius: 5px;
-
-
+.onePhone {
+  text-align: center;
+  width: 300px;
+  -webkit-box-shadow: 4px 4px 8px 4px rgba(0, 0, 0, 0.2);
+          box-shadow: 4px 4px 8px 4px rgba(0, 0, 0, 0.2);
+  margin: 10px 20px;
+  border-radius: 5px;
 }
 
-img {
-    width: 200px;
-    height: 200px;
-    margin: 10px;
-}
-.productPrice {
-    color: rgba(0, 0, 0, 0.788);
-    margin: 20px;
+.onePhone img {
+  width: 200px;
+  height: 200px;
+  margin: 10px;
 }
 
-.seeDetails {
-    border-radius: 5px;
-    background-color: black;
-    color: white;
-    border:none;
-    outline: none;
-    cursor:pointer;
-    font-size: 20px;
-    margin: 0 0 30px 0;
-    padding: 5px;
+.onePhone .productPrice {
+  color: rgba(0, 0, 0, 0.788);
+  margin: 20px;
 }
 
-.seeDetails:hover{
-    background-color: green;
+.onePhone .seeDetails {
+  border-radius: 5px;
+  background-color: black;
+  color: white;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 20px;
+  margin: 0 0 30px 0;
+  padding: 5px;
 }
 
+.onePhone .seeDetails:hover {
+  background-color: green;
+}
+/*# sourceMappingURL=OnePhone.css.map */
