--- a/src/components/ShowProduct/ShowProduct.css
+++ b/src/components/ShowProduct/ShowProduct.css
@@ -1,28 +1,36 @@
 .showProductPage {
-    display: flex;
-    flex-direction: column;
-}
-.product{
-    width: 380px;
-    max-width: 380px;
-    border:3px solid black;
-    margin: 200px auto 405px auto;
-    text-align: center;
-    box-shadow: 0 3px 3px 0 black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.buyButton {
-    border-radius: 5px;
-    background-color: black;
-    color: white;
-    border:none;
-    outline: none;
-    cursor:pointer;
-    font-size: 20px;
-    padding: 5px;
-    margin : 10px 0 ; 
+.showProductPage .product {
+  width: 380px;
+  max-width: 380px;
+  border: 3px solid black;
+  margin: 200px auto 405px auto;
+  text-align: center;
+  -webkit-box-shadow: 0 3px 3px 0 black;
+          box-shadow: 0 3px 3px 0 black;
 }
 
-.buyButton:hover{
-    background-color: green;
+.showProductPage .buyButton {
+  border-radius: 5px;
+  background-color: black;
+  color: white;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 20px;
+  padding: 5px;
+  margin: 10px 0;
 }
+
+.showProductPage .buyButton:hover {
+  background-color: green;
+}
+/*# sourceMappingURL=ShowProduct.css.map */
