--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,8 @@
 // the way i nest everthing inside one class get me the result of local css
 // everthing here will apply only to specific component and will not be global
+$font-width: 18px;           
+
+
 .Header {
     width:100%;
     background-color: white;
@@ -24,25 +27,47 @@
         background-color: white;
         cursor:pointer;
         text-decoration: none;
-        font-size: 1.3vw;
+        font-size: $font-width;
         font-weight: bolder;
         font-family: "Open Sans", sans-serif;
 
     }
     
-    .loginButton {
+    .loginButton, .nav-link {
         margin : 10px 15px;
         padding: 0px;
         text-decoration: none;
         background-color: white;
         color: black;
-        font-size: 1.3vw;
+        font-size: $font-width;
         font-weight: bolder;
         border: none;
         font-family: "Open Sans", sans-serif;
     } 
 
-  
+    @media screen and (max-width: 1024px) {
+        .loginButton, .nav-link{
+            font-size: 17px;
+        }    
+    }  
+    @media screen and (max-width: 900px) {
+        .loginButton, .nav-link{
+            font-size: 15px;
+        }     
+    }
+    @media screen and (max-width: 768px) {
+        .loginButton, .nav-link{
+            font-size: 13px;
+            margin : 6px 6px;
+
+        }     
+    }  
+    @media screen and (max-width: 600px) {
+        .loginButton, .nav-link{
+            font-size: 11px;
+            margin : 6px 6px;
+        }     
+    }
 }
 
 
