--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,7 +21,7 @@
   /* to make link look like button */
   background: none;
   border: none;
-  padding: 0;
+  padding-left: 5px;
   margin: 10px 10px;
   color: black;
   background-color: white;
@@ -32,9 +32,9 @@
   font-family: "Open Sans", sans-serif;
 }
 
-.Header .loginButton, .Header .nav-link {
+.Header .loginButton {
   margin: 10px 15px;
-  padding: 0px;
+  padding-right: 5px;
   text-decoration: none;
   background-color: white;
   color: black;
@@ -52,11 +52,18 @@
 
 @media screen and (max-width: 900px) {
   .Header .loginButton, .Header .nav-link {
-    font-size: 15px;
+    font-size: 17px;
   }
 }
 
 @media screen and (max-width: 768px) {
+  .Header .loginButton, .Header .nav-link {
+    font-size: 15px;
+    margin: 6px 6px;
+  }
+}
+
+@media screen and (max-width: 600px) {
   .Header .loginButton, .Header .nav-link {
     font-size: 13px;
     margin: 6px 6px;
@@ -65,8 +72,8 @@
 
 @media screen and (max-width: 600px) {
   .Header .loginButton, .Header .nav-link {
-    font-size: 11px;
-    margin: 6px 6px;
+    font-size: 13px;
+    margin: 3px 3px;
   }
 }
 /*# sourceMappingURL=Header.css.map */
