--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -19,7 +19,7 @@ $font-width: 18px;
         /* to make link look like button */
         background: none;
         border: none;
-        padding: 0;
+        padding-left: 5px;
 
         // rest of code
         margin : 10px 10px;
@@ -33,9 +33,9 @@ $font-width: 18px;
 
     }
     
-    .loginButton, .nav-link {
+    .loginButton {
         margin : 10px 15px;
-        padding: 0px;
+        padding-right: 5px;
         text-decoration: none;
         background-color: white;
         color: black;
@@ -52,20 +52,26 @@ $font-width: 18px;
     }  
     @media screen and (max-width: 900px) {
         .loginButton, .nav-link{
-            font-size: 15px;
+            font-size: 17px;
         }     
     }
     @media screen and (max-width: 768px) {
         .loginButton, .nav-link{
-            font-size: 13px;
+            font-size: 15px;
             margin : 6px 6px;
 
         }     
     }  
     @media screen and (max-width: 600px) {
         .loginButton, .nav-link{
-            font-size: 11px;
+            font-size: 13px;
             margin : 6px 6px;
+        }     
+    }
+    @media screen and (max-width: 600px) {
+        .loginButton, .nav-link{
+            font-size: 13px;
+            margin : 3px 3px;
         }     
     }
 }
