--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,8 @@
 .Footer {
+  bottom: 0;
+  position: relative;
   width: 100%;
-  -webkit-box-shadow: 0 2px 4px 0 black;
-          box-shadow: 0 2px 4px 0 black;
+  height: 2.5rem;
   background-color: black;
   color: white;
   padding: 0.4rem;
@@ -11,6 +12,6 @@
 }
 
 .Footer p {
-  margin: 10px;
+  margin: 5px;
 }
 /*# sourceMappingURL=Footer.css.map */
