--- a/src/components/ShowProduct/ShowProduct.scss
+++ b/src/components/ShowProduct/ShowProduct.scss
@@ -1,6 +1,7 @@
+@import '../../sass/Variables&Mixins';
+
 .showProductPage {
-    display: flex;
-    flex-direction: column;
+    @include displayFlex();
 
     .product{
         width: 380px;
