--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,14 +1,7 @@
 body {
+  width: 100%;
   margin: 0;
   padding: 0;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   font-size: 18px;
   line-height: 1.8em;
   font-weight: bolder;
@@ -17,5 +10,17 @@ body {
 
 html, body {
   overflow-x: hidden;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+}
+
+#root {
+  height: 100%;
 }
 /*# sourceMappingURL=App.css.map */
