--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -70,10 +70,11 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 400px) {
   .Header .loginButton, .Header .nav-link {
-    font-size: 13px;
-    margin: 3px 3px;
+    font-size: 12px;
+    font-weight: 600;
+    margin: 2px;
   }
 }
 /*# sourceMappingURL=Header.css.map */
