--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,15 +2,15 @@
 // everthing here will apply only to specific component and will not be global
 $font-width: 18px;           
 
-
 .Header {
     width:100%;
     background-color: white;
     color:white;
     padding: 5px;
-    position: fixed;
-    border-bottom: 2px solid grey;
 
+    position: fixed;
+    
+    border-bottom: 2px solid grey;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -68,10 +68,12 @@ $font-width: 18px;
             margin : 6px 6px;
         }     
     }
-    @media screen and (max-width: 600px) {
+    @media screen and (max-width: 400px) {
         .loginButton, .nav-link{
-            font-size: 13px;
-            margin : 3px 3px;
+            font-size: 12px;
+            font-weight: 600;
+            margin : 2px;
+
         }     
     }
 }
