--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,16 @@
 .Home {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-height: 100vh;
   /* so that when you scroll you get the element under the header */
 }
 
@@ -7,7 +18,7 @@
   max-width: 100%;
   width: 100%;
   height: calc(100vw * 0.556);
-  margin: 45px 0 0 0;
+  margin: 40px 0 0 0;
 }
 
 .Home #phones, .Home #Iot {
