--- a/src/components/Iot/Iot.css
+++ b/src/components/Iot/Iot.css
@@ -1,26 +1,48 @@
 .Iot {
-  margin: 0;
   padding: 0;
   scroll-margin-top: 200px;
-  background-color: white;
+  margin: 0 50px;
+  border-top: 2px solid grey;
 }
 
-.Iot h1 {
+.Iot p {
   margin: 20px 20px;
+  font-size: 36px;
+  font-weight: bolder;
 }
 
 .Iot .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+@media screen and (max-width: 600px) {
+  .Iot {
+    margin: 0 25px;
+  }
+  .Iot p {
+    font-size: 30px;
+    font-weight: bold;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .Iot {
+    margin: 0 12px;
+  }
+  .Iot p {
+    font-size: 24px;
+    font-weight: bold;
+  }
 }
 /*# sourceMappingURL=Iot.css.map */
