--- a/src/components/Login_Register/Login.scss
+++ b/src/components/Login_Register/Login.scss
@@ -1,13 +1,13 @@
+@import '../../sass/Variables&Mixins';
+
 .LoginPage {
-    display: flex;
-    flex-direction: column;
+    @include displayFlex();
 
     /* top margin is big to show the content under header */
     .signIn {
-        width: 380px;
-        max-width: 380px;
+        max-width: 360px;
         border:3px solid black;
-        margin: 200px auto 405px auto;
+        margin: 200px auto 50px auto;
         text-align: center;
         box-shadow: 0 3px 3px 0 black;
     }
