--- a/src/components/OneIot/OneIot.scss
+++ b/src/components/OneIot/OneIot.scss
@@ -1,33 +1,7 @@
-.OneIot {
-    text-align: center;
-    width: 300px;
-    box-shadow: 4px 4px 8px 4px rgba(0, 0, 0, 0.2);
-    margin: 10px 20px ;
-    border-radius: 5px;
+@import '../../sass/Variables&Mixins';
 
-    img {
-        width: 200px;
-        height: 200px;
-        margin: 10px;
-    }
-    .productPrice {
-        color: rgba(0, 0, 0, 0.788);
-        margin: 20px;
-    }
-    
-    .seeDetails {
-        border-radius: 5px;
-        background-color: black;
-        color: white;
-        border:none;
-        outline: none;
-        cursor:pointer;
-        font-size: 20px;
-        margin: 0 0 30px 0;
-        padding: 5px;
-    }
-    
-    .seeDetails:hover{
-        background-color: green;
-    }
+.OneIot {
+    @include oneProduct();
 }
+
+
