--- a/src/components/Phones/Phones.scss
+++ b/src/components/Phones/Phones.scss
@@ -1,17 +1,6 @@
+@import '../../sass/Variables&Mixins';
+
 .Phones {
-    margin: 0 100px;
-    padding: 0;
-    scroll-margin-top: 200px;
-
-    h1 {
-        margin: 20px 20px;
-    }
-
-    .container {
-        display: flex;
-        justify-content: flex-start;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
+    @include groupOfProducts();
 }
 
