--- a/src/components/ShowProduct/ShowProduct.css
+++ b/src/components/ShowProduct/ShowProduct.css
@@ -6,6 +6,10 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-height: 100vh;
 }
 
 .showProductPage .product {
