--- a/src/components/shopping_cart/shoppingCart.css
+++ b/src/components/shopping_cart/shoppingCart.css
@@ -6,10 +6,14 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-height: 100vh;
 }
 
 .shoppingCart .shoppingWrap {
-  margin: 200px auto 405px auto;
+  margin: 50px auto 405px auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
