--- a/src/components/ShowProduct/ShowProduct.css
+++ b/src/components/ShowProduct/ShowProduct.css
@@ -13,10 +13,10 @@
 }
 
 .showProductPage .product {
-  width: 380px;
-  max-width: 380px;
+  width: 320px;
+  max-width: 360px;
   border: 3px solid black;
-  margin: 200px auto 405px auto;
+  margin: 100px auto 0 auto;
   text-align: center;
   -webkit-box-shadow: 0 3px 3px 0 black;
           box-shadow: 0 3px 3px 0 black;
@@ -36,5 +36,10 @@
 
 .showProductPage .buyButton:hover {
   background-color: green;
+}
+
+.showProductPage img {
+  height: 100px;
+  width: 100px;
 }
 /*# sourceMappingURL=ShowProduct.css.map */
