--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,9 @@
-.Header {
+.myHeader {
   width: 100%;
   background-color: white;
   color: white;
-  padding: 5px;
+  padding: 0;
   position: fixed;
-  border-bottom: 2px solid grey;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -15,14 +14,16 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-shadow: 1px 1px 0 0 black;
+          box-shadow: 1px 1px 0 0 black;
 }
 
-.Header .nav-link {
+.myHeader .navLink {
   /* to make link look like button */
   background: none;
   border: none;
-  padding-left: 5px;
-  margin: 10px 10px;
+  padding: 10px;
+  margin: 0;
   color: black;
   background-color: white;
   cursor: pointer;
@@ -32,9 +33,9 @@
   font-family: "Open Sans", sans-serif;
 }
 
-.Header .loginButton {
-  margin: 10px 15px;
-  padding-right: 5px;
+.myHeader .loginButton {
+  margin: 0;
+  padding: 10px;
   text-decoration: none;
   background-color: white;
   color: black;
@@ -44,37 +45,22 @@
   font-family: "Open Sans", sans-serif;
 }
 
-@media screen and (max-width: 1024px) {
-  .Header .loginButton, .Header .nav-link {
-    font-size: 17px;
-  }
-}
-
 @media screen and (max-width: 900px) {
-  .Header .loginButton, .Header .nav-link {
-    font-size: 17px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .Header .loginButton, .Header .nav-link {
-    font-size: 15px;
-    margin: 6px 6px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .Header .loginButton, .Header .nav-link {
+  .myHeader .loginButton, .myHeader .navLink {
     font-size: 13px;
-    margin: 6px 6px;
   }
 }
 
-@media screen and (max-width: 400px) {
-  .Header .loginButton, .Header .nav-link {
-    font-size: 12px;
-    font-weight: 600;
-    margin: 2px;
+@media screen and (max-width: 360px) {
+  .myHeader .loginButton, .myHeader .navLink {
+    font-size: 11px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .myHeader .loginButton, .myHeader .navLink {
+    font-size: 11px;
+    padding: 5px;
   }
 }
 /*# sourceMappingURL=Header.css.map */
