--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -8,11 +8,29 @@
         max-width: 100%;
         width: 100%;
         height: calc(100vw * 0.556) ;
-        margin: 40px 0 0 0;
     }
-    
+    .carousel{
+        margin-top: 47px;
+    }
+    @media screen and (max-width: 900px) {
+        .carousel{
+            margin-top: 39px;
+        }
+    }  
+    @media screen and (max-width: 360px) {
+        .carousel{
+            margin-top: 36px;
+        }
+    }  
+    @media screen and (max-width: 320px) {
+        .carousel{
+            margin-top: 27px;
+        }
+    }  
+   
     /* so that when you scroll you get the element under the header */
     #phones, #Iot{
     scroll-margin-top: 120px;
     }
 }
+
