--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,17 +1,11 @@
 .Footer {
-    bottom : 0;
     position: relative;
     width:100%;
-    height: 2.5rem;   
-
+    height: 60px;   
     background-color: black;
     color:white;
-    padding: 0.4rem;
     text-align: center;
     font-size: 27px;
-    margin-top: 30px;
 
-    p {
-        margin: 5px;
-    }
+  
 }
